src/test/deca/context/invalid/ContextSansObjet/Unitaire/affichageImpossibleBoolean.deca
//Description:
//   affichage impossible d'un booléen
//
//Résultat:
// Erreur Contextuelle
//  ligne 9 :   "type non affichable(les types qu'on peut afficher sont int,float et string)"
{
boolean bool=false;
print(b);
}
